// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pagination Generator - Snapshot Tests (Intermediate Data) > should produce consistent button states for first page 1`] = `
{
  "buttons": [
    {
      "ariaLabel": "First page",
      "disabled": true,
      "iconId": "ph-caret-double-left",
      "position": "first",
    },
    {
      "ariaLabel": "Previous page",
      "disabled": true,
      "iconId": "ph-caret-left",
      "position": "middle",
    },
    {
      "ariaLabel": "Next page",
      "disabled": false,
      "iconId": "ph-caret-right",
      "position": "middle",
    },
    {
      "ariaLabel": "Last page",
      "disabled": false,
      "iconId": "ph-caret-double-right",
      "position": "last",
    },
  ],
  "isFirstPage": true,
  "isLastPage": false,
}
`;

exports[`Pagination Generator - Snapshot Tests (Intermediate Data) > should produce consistent button states for last page 1`] = `
{
  "buttons": [
    {
      "ariaLabel": "First page",
      "disabled": false,
      "iconId": "ph-caret-double-left",
      "position": "first",
    },
    {
      "ariaLabel": "Previous page",
      "disabled": false,
      "iconId": "ph-caret-left",
      "position": "middle",
    },
    {
      "ariaLabel": "Next page",
      "disabled": true,
      "iconId": "ph-caret-right",
      "position": "middle",
    },
    {
      "ariaLabel": "Last page",
      "disabled": true,
      "iconId": "ph-caret-double-right",
      "position": "last",
    },
  ],
  "isFirstPage": false,
  "isLastPage": true,
}
`;

exports[`Pagination Generator - Snapshot Tests (Intermediate Data) > should produce consistent button states for middle page 1`] = `
{
  "buttons": [
    {
      "ariaLabel": "First page",
      "disabled": false,
      "iconId": "ph-caret-double-left",
      "position": "first",
    },
    {
      "ariaLabel": "Previous page",
      "disabled": false,
      "iconId": "ph-caret-left",
      "position": "middle",
    },
    {
      "ariaLabel": "Next page",
      "disabled": false,
      "iconId": "ph-caret-right",
      "position": "middle",
    },
    {
      "ariaLabel": "Last page",
      "disabled": false,
      "iconId": "ph-caret-double-right",
      "position": "last",
    },
  ],
  "isFirstPage": false,
  "isLastPage": false,
}
`;

exports[`Pagination Generator - Snapshot Tests (Intermediate Data) > should produce consistent color bindings 1`] = `
{
  "buttonBackground": "color-surface-2",
  "buttonBorder": "color-border",
  "iconDisabled": "text-color-disabled",
  "iconEnabled": "text-color-surface",
  "inputBackground": "color-surface-2",
  "inputBorder": "color-border",
  "inputText": "text-color-surface",
  "showingTextLabel": "text-color-label",
}
`;

exports[`Pagination Generator - Snapshot Tests (Intermediate Data) > should produce consistent complete data structure (golden path) 1`] = `
{
  "colors": {
    "buttonBackground": "color-surface-2",
    "buttonBorder": "color-border",
    "iconDisabled": "text-color-disabled",
    "iconEnabled": "text-color-surface",
    "inputBackground": "color-surface-2",
    "inputBorder": "color-border",
    "inputText": "text-color-surface",
    "showingTextLabel": "text-color-label",
  },
  "dimensions": {
    "borderRadius": 6,
    "buttonSize": 36,
    "gap": 0,
    "iconSize": 16,
    "inputWidth": 50,
    "paginationHeight": 36,
  },
  "registry": {
    "category": "Navigation",
    "colors": [
      "text-label",
    ],
    "description": "Pagination component",
    "name": "Pagination",
    "props": {
      "controls": {
        "default": "full",
        "descriptions": {
          "full": "Full pagination controls with first, previous, page input, next, and last buttons",
          "simple": "Simple pagination controls with only previous and next buttons",
        },
        "optional": true,
        "type": "enum",
        "values": [
          "full",
          "simple",
        ],
      },
    },
  },
  "states": [
    {
      "buttonStates": {
        "buttons": [
          {
            "ariaLabel": "First page",
            "disabled": true,
            "iconId": "ph-caret-double-left",
            "position": "first",
          },
          {
            "ariaLabel": "Previous page",
            "disabled": true,
            "iconId": "ph-caret-left",
            "position": "middle",
          },
          {
            "ariaLabel": "Next page",
            "disabled": false,
            "iconId": "ph-caret-right",
            "position": "middle",
          },
          {
            "ariaLabel": "Last page",
            "disabled": false,
            "iconId": "ph-caret-double-right",
            "position": "last",
          },
        ],
        "isFirstPage": true,
        "isLastPage": false,
      },
      "label": "state=first",
      "page": 1,
      "perPage": 10,
      "showingRange": {
        "lower": 1,
        "maxPage": 10,
        "text": "Showing 1-10 of 100",
        "upper": 10,
      },
      "totalCount": 100,
    },
    {
      "buttonStates": {
        "buttons": [
          {
            "ariaLabel": "First page",
            "disabled": false,
            "iconId": "ph-caret-double-left",
            "position": "first",
          },
          {
            "ariaLabel": "Previous page",
            "disabled": false,
            "iconId": "ph-caret-left",
            "position": "middle",
          },
          {
            "ariaLabel": "Next page",
            "disabled": false,
            "iconId": "ph-caret-right",
            "position": "middle",
          },
          {
            "ariaLabel": "Last page",
            "disabled": false,
            "iconId": "ph-caret-double-right",
            "position": "last",
          },
        ],
        "isFirstPage": false,
        "isLastPage": false,
      },
      "label": "state=middle",
      "page": 5,
      "perPage": 10,
      "showingRange": {
        "lower": 41,
        "maxPage": 10,
        "text": "Showing 41-50 of 100",
        "upper": 50,
      },
      "totalCount": 100,
    },
    {
      "buttonStates": {
        "buttons": [
          {
            "ariaLabel": "First page",
            "disabled": false,
            "iconId": "ph-caret-double-left",
            "position": "first",
          },
          {
            "ariaLabel": "Previous page",
            "disabled": false,
            "iconId": "ph-caret-left",
            "position": "middle",
          },
          {
            "ariaLabel": "Next page",
            "disabled": true,
            "iconId": "ph-caret-right",
            "position": "middle",
          },
          {
            "ariaLabel": "Last page",
            "disabled": true,
            "iconId": "ph-caret-double-right",
            "position": "last",
          },
        ],
        "isFirstPage": false,
        "isLastPage": true,
      },
      "label": "state=last",
      "page": 10,
      "perPage": 10,
      "showingRange": {
        "lower": 91,
        "maxPage": 10,
        "text": "Showing 91-100 of 100",
        "upper": 100,
      },
      "totalCount": 100,
    },
  ],
}
`;

exports[`Pagination Generator - Snapshot Tests (Intermediate Data) > should produce consistent dimensions config 1`] = `
{
  "borderRadius": 6,
  "buttonSize": 36,
  "gap": 0,
  "iconSize": 16,
  "inputWidth": 50,
  "paginationHeight": 36,
}
`;

exports[`Pagination Generator - Snapshot Tests (Intermediate Data) > should produce consistent showing range for first page 1`] = `
{
  "lower": 1,
  "maxPage": 10,
  "text": "Showing 1-10 of 100",
  "upper": 10,
}
`;

exports[`Pagination Generator - Snapshot Tests (Intermediate Data) > should produce consistent showing range for last page 1`] = `
{
  "lower": 91,
  "maxPage": 10,
  "text": "Showing 91-100 of 100",
  "upper": 100,
}
`;

exports[`Pagination Generator - Snapshot Tests (Intermediate Data) > should produce consistent showing range for middle page 1`] = `
{
  "lower": 41,
  "maxPage": 10,
  "text": "Showing 41-50 of 100",
  "upper": 50,
}
`;

exports[`Pagination Generator - Snapshot Tests (Intermediate Data) > should produce consistent state config 1`] = `
[
  {
    "label": "state=first",
    "page": 1,
  },
  {
    "label": "state=middle",
    "page": 5,
  },
  {
    "label": "state=last",
    "page": 10,
  },
]
`;
